                                  _   _ ____  _
                              ___| | | |  _ \| |
                             / __| | | | |_) | |
                            | (__| |_| |  _ <| |___
                             \___|\___/|_| \_\_____|

                                  Changelog

Daniel Stenberg (15 Jun 2009)
- Eric Wong's patch:

  This allows curl(1) to be used as a client-side tunnel for arbitrary stream
  protocols by abusing chunked transfer encoding in both the HTTP request and
  HTTP response.  This requires server support for sending a response while a
  request is still being read, of course.

  If attempting to read from stdin returns EAGAIN, then we pause our sender.
  This leaves curl to attempt to read from the socket while reading from stdin
  (and thus sending) is paused.

  This change was needed to allow successfully tunneling the git protocol over
  HTTP (--no-buffer is needed, as well).

Patrick Monnerat (15 Jun 2009)
- Replaced use of standard C library rand()/srand() by our own pseudo-random
  number generator.

Yang Tse (11 Jun 2009)
- I adapted testcurl script to allow building test harness programs when
  cross-compiling for a *-*-mingw* host.

Daniel Stenberg (10 Jun 2009)
- Fabian Keil ran clang on the (lib)curl code, found a bunch of warnings and
  contributed a range of patches to fix them.

Yang Tse (10 Jun 2009)
- I introduced configure script option --enable-curldebug which now allows
  the decoupled enabling or disabling of the curl debug memory tracking
  feature from the --enable-debug option which no longer controls this.

  curl --version will list 'Debug' feature for debug enabled builds, and
  will list 'TrackMemory' feature for curl debug memory tracking capable
  builds. These features are independent and can be controlled when running
  the configure script. When --enable-debug is given both features will be
  enabled, unless some restriction prevents memory tracking from being used.
